small updates an cleanup